# bazel_go_sample

./: BUILD.bazel  README.md  WORKSPACE  go.mod  hello.go
