load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "hello",
    embed = [":bazel_go_sample_lib"],
    visibility = ["//visibility:public"],
)
go_library(
    name = "bazel_go_sample_lib",
    srcs = ["hello.go"],
    importpath = "github.com/mocyuto/bazel_go_sample",
    visibility = ["//visibility:private"],
)

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mocyuto/bazel_go_sample
gazelle(name = "gazelle")

load("@io_bazel_rules_docker//container:container.bzl", "container_image")
container_image(
    name = "basic_alpine",
    base = "@alpine_linux_arm64//image",
    cmd = ["Hello World!"],
    entrypoint = ["echo"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
go_image(
    name = "go_image",
    srcs = ["hello.go"],
    visibility = ["//visibility:public"],
    goos = "linux",
    goarch = "amd64",
    importpath = "github.com/mocyuto/bazel_go_sample",
)
